# Math-old

./: CMakeLists.txt  doc.h  main.c  main.h
ctest/: CMakeLists.txt  test.h
ctest/array/: CMakeLists.txt  copy.c  copya.c  del.c  dela.c  ensuresize.c  iseq.c  iseqa.c  issim.c  issima.c  new.c  new0.c  newa.c  newa0.c  newas.c  news.c  resize.c  sizeof.c  sizeofa.c  stracpy.c  stracpy2.c  strancpy.c  strancpy2.c  strcpy.c  strcpy2.c  strncpy.c  strncpy2.c
ctest/bool8/: CMakeLists.txt  check.c  get.c  set.c  uncheck.c
ctest/linear/: CMakeLists.txt
ctest/numbers/: CMakeLists.txt
ctest/numbers/n/: CMakeLists.txt  N_assign.c  N_diff.c  N_div.c  N_equal.c  N_inf.c  N_mayor.c  N_mayoreq.c  N_minor.c  N_new.c  N_print.c  N_prod.c  N_sum.c  N_value.c  N_zero.c
libs/array/: CMakeLists.txt  array.c  array.h  doc.h
libs/bool8/: CMakeLists.txt  bool8.c  bool8.h
libs/linear/: CMakeLists.txt  doc.h  linear.c  linear.h  literal.c  literal.h  matrix.c  rules.h  var.c
libs/linear-old/: doc.h  literal-old.c  literal-old.h  matrix-old.c  var-old.c
libs/numbers/: CMakeLists.txt  n.c  n.h  numbers.c  numbers.h  z.c  z.h
