cmake_minimum_required(VERSION 3.14.0 FATAL_ERROR)

add_executable(ctest_array_newa newa.c)
add_executable(ctest_array_newa0 newa0.c)
add_executable(ctest_array_newas newas.c)
add_executable(ctest_array_resize resize.c)
add_executable(ctest_array_ensuresize ensuresize.c)
add_executable(ctest_array_copya copya.c)
add_executable(ctest_array_sizeofa sizeofa.c)
add_executable(ctest_array_issima issima.c)
add_executable(ctest_array_iseqa iseqa.c)
add_executable(ctest_array_dela dela.c)
add_executable(ctest_array_stracpy stracpy.c)
add_executable(ctest_array_strancpy strancpy.c)
add_executable(ctest_array_stracpy2 stracpy2.c)
add_executable(ctest_array_strancpy2 strancpy2.c)

add_test(array_newa ctest_array_newa)
add_test(array_newa0 ctest_array_newa0)
add_test(array_newas ctest_array_newas)
add_test(array_resize ctest_array_resize)
add_test(array_ensuresize ctest_array_ensuresize)
add_test(array_copya ctest_array_copya)
add_test(array_sizeofa ctest_array_sizeofa)
add_test(array_issima ctest_array_issima)
add_test(array_iseqa ctest_array_iseqa)
add_test(array_dela ctest_array_dela)
add_test(array_stracpy ctest_array_stracpy)
add_test(array_strancpy ctest_array_strancpy)
add_test(array_stracpy2 ctest_array_stracpy2)
add_test(array_strancpy2 ctest_array_strancpy2)