cmake_minimum_required(VERSION 3.14.0 FATAL_ERROR)

add_executable(ctest_number_N_new N_new.c)
add_executable(ctest_number_N_value N_value.c)
add_executable(ctest_number_N_print N_print.c)
add_executable(ctest_number_N_assign N_assign.c)
add_executable(ctest_number_N_zero N_zero.c)
add_executable(ctest_number_N_inf N_inf.c)
add_executable(ctest_number_N_mayor N_mayor.c)
add_executable(ctest_number_N_mayoreq N_mayoreq.c)
add_executable(ctest_number_N_minor N_minor.c)
add_executable(ctest_number_N_minoreq N_minoreq.c)
add_executable(ctest_number_N_equal N_equal.c)
add_executable(ctest_number_N_sum N_sum.c)
add_executable(ctest_number_N_diff N_diff.c)
add_executable(ctest_number_N_prod N_prod.c)
add_executable(ctest_number_N_div N_div.c)

add_test(number_N_new ctest_number_N_new)
add_test(number_N_value ctest_number_N_value)
add_test(number_N_print ctest_number_N_print)
add_test(number_N_assign ctest_number_N_assign)
add_test(number_N_zero ctest_number_N_zero)
add_test(number_N_inf ctest_number_N_inf)
add_test(number_N_mayor ctest_number_N_mayor)
add_test(number_N_mayoreq ctest_number_N_mayoreq)
add_test(number_N_minor ctest_number_N_minor)
add_test(number_N_minoreq ctest_number_N_minoreq)
add_test(number_N_equal ctest_number_N_equal)
add_test(number_N_sum ctest_number_N_sum)
add_test(number_N_diff ctest_number_N_diff)
add_test(number_N_prod ctest_number_N_prod)
add_test(number_N_div ctest_number_N_div)